Dark Mode bug

--- a/Suite/src/styles/form.scss
+++ b/Suite/src/styles/form.scss
@@ -3,7 +3,11 @@
 #form {
 	width: 100vw;
 	height: 100%;
-	background-color: rgb(235, 235, 235);
+
+	* {
+		color: $modefont;
+	}
+	background-color: $modebg;
 
 	.form-cont {
 		text-align: center;
